--- a/sass/main.scss
+++ b/sass/main.scss
@@ -197,11 +197,11 @@ body.overflow {
 
 .main_section {
 	width: 100%;
-	height: calc(100vh - 80px);
+	height: 635px;
 	overflow: hidden;
 	background-image: linear-gradient(to right ,#E2DFFF,#988CFE);
 	position: relative;
-	    background-repeat: no-repeat;
+	background-repeat: no-repeat;
     background-position: 120% 35%;
 
     .main_section_img {
@@ -441,6 +441,10 @@ body.overflow {
 	    top: 75px;
 	    left: -130px;
 	    z-index: -1;
+	    animation-name: s_cloudAnime;
+	    animation-duration: 10s;
+	    animation-direction: alternate-reverse;
+	    animation-iteration-count: infinite
 	}
 
 
@@ -453,10 +457,38 @@ body.overflow {
 	    top: 96px;
 	    right: -22%;
 	    z-index: -1;
+	        animation-name: b_cloudAnime;
+    animation-duration: 9s;
+    animation-direction: alternate-reverse;
+    animation-iteration-count: infinite;
 	}
 
 
 }
+
+
+@keyframes s_cloudAnime {
+	0% {
+    transform: translate(0);
+}
+100% {
+    transform: translate(50px, 60px);
+}
+
+}
+@keyframes b_cloudAnime { 
+	0% {
+    transform: translate(0);
+}
+60% {
+    transform: translate(60px, 80px);
+}
+100% {
+    transform: translate(130px, 80px);
+}
+
+}
+
 
 .casino_list_container {
 	padding: 10px 0 30px;
@@ -663,7 +695,6 @@ body.overflow {
 			text-align: center;
 			color: #2C3E50;
 			font-size: 32px;
-			opacity: 0.4;
 			margin-bottom: 30px;
 					margin-top: 20px;
 
@@ -808,7 +839,7 @@ body.overflow {
   	 	background-color: #2C3E50;
   	 	border-radius: 50%;
   	 	position: relative;
-  	 	margin-right: 10px;
+  	 	margin-right: 13px;
   	 	button {
   	 			display: none;
   	 		}
@@ -818,14 +849,14 @@ body.overflow {
   	 		left: 50%;
   	 		width: 22px;
   	 		height: 22px;
-  	 		/*border: 1px solid #5642EC;*/
+  	 		border: 1px solid #5642EC;
   	 		border-radius: 50%;
-  	 		border-left: unset;
+  	 		/*border-left: unset;*/
   	 		content: "";
   	 		transform: translate(-50%,-50%) rotate(-92deg);
   	 		opacity: 0;
   	 		transition: all .4s;
-  	 		background-image: url("../images/round.svg");
+  	 		/*background-image: url("../images/round.svg");*/
 
 
   	 	}
@@ -1589,8 +1620,8 @@ background-image:
 		justify-content: space-between;
 
 		&>div {
-			flex: 0 0 30%;
-			max-width: 30%;
+			flex: 0 0 32%;
+			max-width: 32%;
 
 		}
 
@@ -1729,7 +1760,11 @@ background-image:
 	}
 }
 
-
+.body_right {
+	position: sticky;
+	top: 0;
+	left: 0;
+}
 .error_fluid {
 	width: 100%;
 	height: 100%;
@@ -1757,6 +1792,10 @@ background-image:
 			    background-color: #C8C2FB;
 			    content: "";
 			    z-index: 10;
+			        animation-name: s_cloudAnime;
+    animation-duration: 10s;
+    animation-direction: alternate-reverse;
+    animation-iteration-count: infinite;
 		}
 	}
 
@@ -1778,15 +1817,15 @@ background-image:
 
 		a {
 			margin-top: 15px;
-			border-radius: 17px;
-			background-color: #fff;
-			display: flex;
-			align-items: center;
-			justify-content: center;
-			color: #5642EC;
-			border: 1px solid #5642EC;
-			padding: 4px 10px;
-			transition: all .4s;
+		    border-radius: 19px;
+		    background-color: #fff;
+		    display: flex;
+		    align-items: center;
+		    justify-content: center;
+		    color: #5642EC;
+		    border: 1px solid #5642EC;
+		    padding: 6px 15px;
+		    transition: all .4s;
 
 			&:hover{
 				color:#fff;
@@ -1882,6 +1921,10 @@ input, textarea {
   box-shadow: 0px 0px 8px 2px #0000000a;
   border-radius: 35px;
   color: #2C3E50;
+  transition: all .4s;
+  &.shadow {
+  	box-shadow: 0px 0px 8px 2px #0000001f;
+  }
   &:focus {
  
     outline: 0;
@@ -2178,13 +2221,7 @@ textarea {
 		}
 	}
 }
-
-
-.casino_inner_body {
-	padding-top: 40px;
-	display: flex;
-
-	.body_right {
+.body_right {
 		flex:0 0 345px;
 		max-width: 345px;
 		margin-left: 20px;
@@ -2197,7 +2234,7 @@ textarea {
 			position: relative;
 			.casino_right_bg {
 				position: absolute;
-				bottom: -7px;
+				bottom: -5px;
 				left: 50%;
 				transform: translateX(-50%);
 			}
@@ -2240,6 +2277,28 @@ textarea {
 				}
 		}
 	}
+
+
+.body_right_wrapper {
+	position: absolute;
+    top: 0;
+    right:10px;
+    height: 100%;
+    z-index: 100;
+}
+
+.casino_page_container{
+
+	 max-width: 760px;
+    margin: 0; 
+    width: 100%;
+}
+
+.casino_inner_body {
+	padding-top: 40px;
+	display: flex;
+	align-items: flex-start;
+	
 
 
 	.body_left {
@@ -2333,13 +2392,14 @@ textarea {
 
 					span {
 						color: #2C3E50;
+						white-space: nowrap;
 					}
 				}
 			}
 			&>div {
 
-				flex:0 0 47%;
-				max-width: 47%;
+				flex:0 0 49%;
+				max-width: 49%;
 				border-radius: 10px;
 				padding: 20px;
 				background-color: #fff;
@@ -2358,7 +2418,6 @@ textarea {
 
 .casino_inner_fluid {
 	position: relative;
-	overflow: hidden;
 	.casino_inner_shape {
 	position: absolute;
     top: calc(333px + 9%);
@@ -2408,9 +2467,22 @@ textarea {
 
 .games_fluid {
 
-	background-image: linear-gradient(to right,#E1DEFD,#988CFE);
+	
 	padding: 50px 10px;
+	width: calc(100% + 10px);
+  
+    position: relative;
 
+    &:after{
+    	content:"";
+    	position: absolute;
+    	top: 0;
+    	left: -55vw;
+    	width: 200vw;
+    	height: 100%;
+    	z-index: -1;
+    	background-image: linear-gradient(to right,#E1DEFD,#988CFE);
+    }
 	.games_links_wrapper {
 
 		display: flex;
@@ -2589,8 +2661,8 @@ textarea {
 	justify-content: space-between;
 
 	&>div {
-		flex:0 0 47%;
-		max-width: 47%;
+		flex:0 0 49%;
+		max-width: 49%;
 	}
 }
 
@@ -2705,11 +2777,38 @@ textarea {
 
 	content: unset;
 }
-
+.games_fluid {
+	margin-top: 50px;
+}
 }
 
 
 @media screen and (max-width: 992px) {
+
+
+.games_fluid:after {
+    content: "";
+    position: absolute;
+    top: 0px;
+    left: -20px;
+    width: calc(100vw + 10px);
+    height: 100%;
+    z-index: 1;
+    background-image: linear-gradient(to right, #E1DEFD, #988CFE);
+}
+
+.casino_page_container {
+    max-width: 760px;
+    margin: 0;
+    width: 100%;
+    position: relative;
+    z-index: 111;
+}
+
+.games_fluid {
+	width: 100%;
+}
+
 .casino_inner_body .body_left .payment_method_container .logo_container img {
     flex: 0 0 30%;
     max-width: 31%;
@@ -2717,7 +2816,13 @@ textarea {
     margin-right: 1%;
     object-fit: contain;
 }
-
+.body_right_wrapper {
+	position: unset;
+	padding-top: 355px;
+}
+.body_right {
+	position: relative;
+}
 .casino_inner_header:after {
 	height: 247px !important;
 	background-color: #e5e2ff;
@@ -2764,6 +2869,7 @@ textarea {
 
 .casino_inner_fluid:before {
 	height: 100%;
+	display: none;
 }
 
 .user_reviews_container {
@@ -2787,12 +2893,12 @@ textarea {
     left: 50%;
     transform: translateX(-50%);
 }
-.casino_inner_body .body_right .casino_right_cotent .casino_right_tab:after {
+.body_right .casino_right_cotent .casino_right_tab:after {
 	display: none;
 }
 
 
-.casino_inner_body .body_right .casino_right_cotent .casino_right_tab {
+.body_right .casino_right_cotent .casino_right_tab {
 	    padding: 25px 15px 25px;
 }
 
@@ -2874,18 +2980,30 @@ textarea {
 	.casino_inner_body {
 		display: flex;
 		flex-direction: column-reverse;
-		padding-top: 355px;
+		padding-top: 5px;
 	}
 
-	.casino_inner_body .body_right {
+	.body_right {
 		margin-left: 0;
+	}
+
+	.classic_list + div {
+		padding-bottom: 35px;
+	}
+
+	.casino_inner_fluid .long_text_fluid.casino_page_fluid{
+		padding-bottom:35px !important;
 	}
 
 .blog_header_info_fluid .blog_header_info:not(:last-child):after {
 	right: -10px;
+	top: -1px;
+}
+.blog_inner_header .common_header_body .blog_header_info_fluid .blog_header_info:after {
+	top: -1px !important;
 }
 .blog_header_info_fluid .blog_header_info {
-	margin-bottom: 10px !important;
+	margin-bottom: 0px !important;
 }
 .blog_fluid .blog_container .blog_left_fluid .blog_main_body .blog_info_wrapper .blog_readmore a {
 	background-color: #5642EC;
@@ -2992,6 +3110,7 @@ textarea {
 
 .lists_fluid {
 	display: block;
+	padding: 10px 0 20px;
 }
 .contact_container {
     max-width: 720px;
@@ -3054,7 +3173,7 @@ textarea {
 
 .blog_inner_header .common_header_body .blog_header_info_fluid span {
     color: #BCBBBA !important;
-    font-size: 12px;
+    font-size: 10px;
 }
 
 .blog_inner_container .blog_inner_img {
@@ -3147,6 +3266,7 @@ textarea {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  transform: scale(0.7);
   /*height: 62px;*/
 }
 
@@ -3543,7 +3663,7 @@ footer .scrop_top {
 .blog_inner_header .common_header_body .title {
 
 font-size: 14px;
-    color: #5642EC;
+    color: #fff;
     padding: 0 24px;
     line-height: 18px;
 }
@@ -3570,3 +3690,11 @@ font-size: 14px;
 
 }
 
+
+.review_container input, .review_container textarea{
+	border: 1px solid transparent;
+	transition: all .4s;
+	&.border {
+		border-color: #5642EC;
+	}
+}
