--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2207,6 +2207,7 @@ textarea {
 		align-items: center;
 		justify-content: center;
 		position: relative;
+		box-shadow: 0px 0px 8px 4px #00000014;
 
 		.top_star {
 			top: unset;
@@ -2221,6 +2222,14 @@ textarea {
 		}
 	}
 }
+
+.casino_inner_header {
+
+	.common_container {
+		padding-bottom: 10px;
+	}
+}
+
 .body_right {
 		flex:0 0 345px;
 		max-width: 345px;
@@ -2229,7 +2238,7 @@ textarea {
 		.casino_right_cotent {
 			border-radius: 10px 50px 10px 10px;
 			background-color: #fff;
-			box-shadow: 0px 0px 8px 4px #0000001a;
+			    box-shadow: 0px 0px 8px 4px #00000014;
 			padding: 16px 16px 90px 16px;
 			position: relative;
 			.casino_right_bg {
@@ -2281,8 +2290,8 @@ textarea {
 
 .body_right_wrapper {
 	position: absolute;
-    top: 0;
-    right:10px;
+    top: -55px;
+    left:990px;
     height: 100%;
     z-index: 100;
 }
@@ -2944,6 +2953,7 @@ textarea {
 	max-width: 260px;
 	height: 260px;
 	width: 260px;
+
 }
 
 .casino_inner_body .body_left .limits_fluid > div {
