--- a/css/main.css
+++ b/css/main.css
@@ -289,7 +289,8 @@ body.overflow {
     border-radius: 50%; }
   .main_body .short_info .short_info_text p, .main_body .short_info .short_info_text span {
     font-family: 'Roboto';
-    color: #2C3E50; }
+    color: #2C3E50;
+    line-height: 24px; }
   .main_body .short_info .short_info_title {
     max-width: 720px;
     margin: 0 auto 30px; }
@@ -351,10 +352,15 @@ body.overflow {
     border: 1px solid #E5E5E5;
     background: #fff;
     align-items: center;
-    margin-bottom: 20px; }
+    margin-bottom: 20px;
+    transition: all .5s; }
     .casino_list_container .casino_list_item .rev_stars {
       display: flex;
       justify-content: center; }
+    .casino_list_container .casino_list_item:hover {
+      box-shadow: 0 0 13px 5px #00000029; }
+      .casino_list_container .casino_list_item:hover .casino_list_logo img {
+        transform: scale(1.2); }
   .casino_list_container .casino_list_logo {
     width: 200px;
     height: 140px;
@@ -366,11 +372,13 @@ body.overflow {
       height: 100%;
       display: flex;
       align-items: center;
-      justify-content: center; }
+      justify-content: center;
+      overflow: hidden; }
       .casino_list_container .casino_list_logo a img {
         width: 100%;
         height: 100%;
-        object-fit: contain; }
+        object-fit: contain;
+        transition: all .5s; }
   .casino_list_container .casino_list_li {
     flex-grow: 1; }
     .casino_list_container .casino_list_li li svg {
@@ -480,7 +488,8 @@ body.overflow {
   .long_text_fluid .long_text_paragraph p, .long_text_fluid .long_text_paragraph span, .long_text_fluid .long_text_paragraph a {
     color: #2C3E50;
     font-size: 16px;
-    font-family: "Roboto"; }
+    font-family: "Roboto";
+    line-height: 24px; }
   .long_text_fluid .long_text_paragraph a {
     color: #5642EC;
     text-decoration: underline; }
@@ -662,7 +671,8 @@ footer {
     padding-bottom: 25px; }
     footer .footer_top > div:nth-child(1) {
       width: 60%;
-      padding-right: 45px; }
+      padding-right: 45px;
+      line-height: 24px; }
     footer .footer_top > div:nth-child(2) {
       width: 20%; }
     footer .footer_top > div:nth-child(3) {
@@ -744,7 +754,11 @@ footer {
     border-radius: 50%;
     background-color: #C8C2FB;
     content: "";
-    z-index: 10; }
+    z-index: 10;
+    animation-name: s_cloudAnime;
+    animation-duration: 10s;
+    animation-direction: alternate-reverse;
+    animation-iteration-count: infinite; }
   .common_header.bg_left:before {
     right: unset;
     left: 15%;
@@ -1039,13 +1053,15 @@ footer {
       width: 100%;
       height: 100%;
       object-fit: cover; }
-  .blog_inner_container .blog_inner_text h5, .blog_inner_container .blog_inner_text .title {
-    font-size: 20px;
-    color: #2C3E50;
-    margin: 20px 0; }
-  .blog_inner_container .blog_inner_text p, .blog_inner_container .blog_inner_text span {
-    color: #2C3E50;
-    font-family: 'Roboto'; }
+  .blog_inner_container .blog_inner_text {
+    line-height: 24px; }
+    .blog_inner_container .blog_inner_text h5, .blog_inner_container .blog_inner_text .title {
+      font-size: 20px;
+      color: #2C3E50;
+      margin: 20px 0; }
+    .blog_inner_container .blog_inner_text p, .blog_inner_container .blog_inner_text span {
+      color: #2C3E50;
+      font-family: 'Roboto'; }
   .blog_inner_container .blog_banner {
     width: 100%;
     height: 150px;
@@ -1162,7 +1178,7 @@ footer {
 
 .body_right {
   position: sticky;
-  top: 0;
+  top: 30px;
   left: 0; }
 
 .error_fluid {
@@ -1506,7 +1522,7 @@ textarea {
     .body_right .casino_right_cotent .casino_right_tab {
       width: 100%;
       border-radius: 16px 60px 16px 16px;
-      padding: 3px 3px 3px 3px;
+      padding: 2px 2px 2px 2px;
       position: relative;
       overflow: hidden; }
       .body_right .casino_right_cotent .casino_right_tab:after {
@@ -2597,13 +2613,13 @@ textarea {
 
 .casino_right_cotent > div:nth-child(2) .rainbow {
   animation-delay: 0.5s !important;
-  animation-duration: 10s !important; }
+  animation-duration: 12s !important; }
 
 .rainbow {
   width: 100%;
   height: 100%;
-  -webkit-animation: o-rotate-360 linear 8s infinite;
-  animation: o-rotate-360 linear 8s infinite;
+  -webkit-animation: o-rotate-360 linear 11s infinite;
+  animation: o-rotate-360 linear 11s infinite;
   position: absolute;
   top: 0;
   left: 0; }
