--- a/sass/main.scss
+++ b/sass/main.scss
@@ -199,6 +199,15 @@ body.overflow {
 
 }
 
+.casino_slider_container {
+
+	h1,h2,h3,h4,h5,h6 {
+		    color: #2C3E50;
+    text-align: center;
+    margin-bottom: 30px;
+	}
+}
+
 
 .main_section {
 	width: 100%;
@@ -302,17 +311,19 @@ body.overflow {
     		}
     	}
     .item_center_title {
-					text-align: center;
-					color: #fff;
-					margin: 6px 0;
+					    text-align: center;
+				    color: #fff;
+				    margin: 6px 0;
+				    font-size: 14px;
+				    line-height: 15px;
 				}
 			.item_title_cont {
 				display: flex;
 			    align-items: center;
 				
 				svg {
-					width: 42px;
-					height: 42px;
+					width: 30px;
+					height: 30px;
 					margin-right: 2px;
 				}
 
@@ -322,9 +333,9 @@ body.overflow {
 			    	text-align: center;
 			    	span:first-child{
 				    	color: #fff;
-					    font-size: 40px;
+					    font-size: 24px;
 					    display: block;
-					    line-height: 34px;
+					    line-height: 21px;
 			    	}
 
 			    	span:last-child {
@@ -723,13 +734,21 @@ body.overflow {
 	}
 
 	.long_text_paragraph {
-
+		line-height: 24px;
 		p,span,a {
 			color: #2C3E50;
 			font-size: 16px;
 			font-family: "Roboto";
 			line-height: 24px;
 
+		}
+
+		h1,h2,h3,h4,h5,h6 {
+			/*text-align: center;*/
+			color: #2C3E50;
+			/*font-size: 32px;*/
+			margin-bottom: 30px;
+			margin-top: 20px;
 		}
 
 		a {
@@ -757,6 +776,8 @@ body.overflow {
 		color: #2C3E50;
 		text-align: center;
 		margin-bottom: 30px;
+
+
 	}	
 
 	.casino_list_item {
@@ -2246,6 +2267,7 @@ textarea {
 			width: 100%;
 			height: 100%;
 			object-fit: contain;
+			border-radius: 50%;
 		}
 	}
 }
@@ -2418,7 +2440,7 @@ textarea {
 		.limits_fluid {
 			display: flex;
 			justify-content: space-between;
-
+			margin-bottom: 20px;
 			.limit_tabs_fluid {
 
 				.limit_text {
@@ -2543,6 +2565,10 @@ textarea {
 			margin-right: 1.5%;
 			margin-bottom: 15px;
 			height: 100px;
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			flex-direction: column;
 
 			a {
 				display: flex;
@@ -2603,11 +2629,11 @@ textarea {
 .lists_fluid {
 	width: 100%;
 	display: flex;
-	justify-content: space-between;
+	justify-content: flex-start;
 	padding: 40px 0;
 	&>div {
-		flex:0 0 32%;
-		max-width: 32%;
+		flex:0 0 31.5%;
+		max-width: 31.5%;
 	}
 
 	.list_title {
@@ -2631,6 +2657,7 @@ textarea {
 	.list_container {
 		border-radius: 13px;
 	padding: 20px 30px 25px 38px;
+	margin-right: 1%;
 
 		&.green {
 			background-color: #E8F5E9;
@@ -2843,7 +2870,7 @@ textarea {
 
 .casino_page_container {
     max-width: 760px;
-    margin: 0;
+    margin: 0 0 20px;
     width: 100%;
     position: relative;
     z-index: 111;
