--- a/css/main.css
+++ b/css/main.css
@@ -129,6 +129,11 @@ body.overflow {
           .header .header_right nav ul li a:hover {
             color: #5642EC; }
 
+.casino_slider_container h1, .casino_slider_container h2, .casino_slider_container h3, .casino_slider_container h4, .casino_slider_container h5, .casino_slider_container h6 {
+  color: #2C3E50;
+  text-align: center;
+  margin-bottom: 30px; }
+
 .main_section {
   width: 100%;
   height: 635px;
@@ -210,21 +215,23 @@ body.overflow {
         .main_section .home_slider .home_slider_item .home_slide_item_wrapper .item_center_title {
           text-align: center;
           color: #fff;
-          margin: 6px 0; }
+          margin: 6px 0;
+          font-size: 14px;
+          line-height: 15px; }
         .main_section .home_slider .home_slider_item .home_slide_item_wrapper .item_title_cont {
           display: flex;
           align-items: center; }
           .main_section .home_slider .home_slider_item .home_slide_item_wrapper .item_title_cont svg {
-            width: 42px;
-            height: 42px;
+            width: 30px;
+            height: 30px;
             margin-right: 2px; }
           .main_section .home_slider .home_slider_item .home_slide_item_wrapper .item_title_cont .item_title {
             text-align: center; }
             .main_section .home_slider .home_slider_item .home_slide_item_wrapper .item_title_cont .item_title span:first-child {
               color: #fff;
-              font-size: 40px;
+              font-size: 24px;
               display: block;
-              line-height: 34px; }
+              line-height: 21px; }
             .main_section .home_slider .home_slider_item .home_slide_item_wrapper .item_title_cont .item_title span:last-child {
               color: #fff;
               display: block;
@@ -485,17 +492,25 @@ body.overflow {
       font-size: 32px;
       margin-bottom: 30px;
       margin-top: 20px; }
-  .long_text_fluid .long_text_paragraph p, .long_text_fluid .long_text_paragraph span, .long_text_fluid .long_text_paragraph a {
-    color: #2C3E50;
-    font-size: 16px;
-    font-family: "Roboto";
+  .long_text_fluid .long_text_paragraph {
     line-height: 24px; }
-  .long_text_fluid .long_text_paragraph a {
-    color: #5642EC;
-    text-decoration: underline; }
-  .long_text_fluid .long_text_paragraph .title {
-    margin: 30px 0 20px;
-    font-size: 24px; }
+    .long_text_fluid .long_text_paragraph p, .long_text_fluid .long_text_paragraph span, .long_text_fluid .long_text_paragraph a {
+      color: #2C3E50;
+      font-size: 16px;
+      font-family: "Roboto";
+      line-height: 24px; }
+    .long_text_fluid .long_text_paragraph h1, .long_text_fluid .long_text_paragraph h2, .long_text_fluid .long_text_paragraph h3, .long_text_fluid .long_text_paragraph h4, .long_text_fluid .long_text_paragraph h5, .long_text_fluid .long_text_paragraph h6 {
+      /*text-align: center;*/
+      color: #2C3E50;
+      /*font-size: 32px;*/
+      margin-bottom: 30px;
+      margin-top: 20px; }
+    .long_text_fluid .long_text_paragraph a {
+      color: #5642EC;
+      text-decoration: underline; }
+    .long_text_fluid .long_text_paragraph .title {
+      margin: 30px 0 20px;
+      font-size: 24px; }
 
 .casino_slider_fluid {
   width: 100%;
@@ -1496,7 +1511,8 @@ textarea {
     .casino_inner_header .casino_inner_main_logo > img {
       width: 100%;
       height: 100%;
-      object-fit: contain; }
+      object-fit: contain;
+      border-radius: 50%; }
 
 .casino_inner_header .common_container {
   padding-bottom: 10px; }
@@ -1608,7 +1624,8 @@ textarea {
             cursor: pointer; }
     .casino_inner_body .body_left .limits_fluid {
       display: flex;
-      justify-content: space-between; }
+      justify-content: space-between;
+      margin-bottom: 20px; }
       .casino_inner_body .body_left .limits_fluid .limit_tabs_fluid {
         display: flex; }
         .casino_inner_body .body_left .limits_fluid .limit_tabs_fluid .limit_text {
@@ -1694,7 +1711,11 @@ textarea {
       max-width: 23%;
       margin-right: 1.5%;
       margin-bottom: 15px;
-      height: 100px; }
+      height: 100px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-direction: column; }
       .games_fluid .games_links_wrapper .games_links a {
         display: flex;
         flex-direction: column;
@@ -1734,11 +1755,11 @@ textarea {
 .lists_fluid {
   width: 100%;
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-start;
   padding: 40px 0; }
   .lists_fluid > div {
-    flex: 0 0 32%;
-    max-width: 32%; }
+    flex: 0 0 31.5%;
+    max-width: 31.5%; }
   .lists_fluid .list_title {
     font-size: 24px;
     text-align: center; }
@@ -1748,7 +1769,8 @@ textarea {
     font-family: "Roboto"; }
   .lists_fluid .list_container {
     border-radius: 13px;
-    padding: 20px 30px 25px 38px; }
+    padding: 20px 30px 25px 38px;
+    margin-right: 1%; }
     .lists_fluid .list_container.green {
       background-color: #E8F5E9;
       border: 1px solid #1B5E20; }
@@ -1888,7 +1910,7 @@ textarea {
 
   .casino_page_container {
     max-width: 760px;
-    margin: 0;
+    margin: 0 0 20px;
     width: 100%;
     position: relative;
     z-index: 111; }
