--- a/css/main.css
+++ b/css/main.css
@@ -426,7 +426,7 @@ body.overflow {
   display: flex;
   align-items: center;
   color: #fff;
-  border: 1px solid #27AE60;
+  border: 2px solid #27AE60;
   transition: all .3s; }
   .casino_list_button a svg {
     margin-right: 10px;
@@ -439,7 +439,8 @@ body.overflow {
     white-space: nowrap;
     color: #27AE60; }
   .casino_list_button a:hover {
-    background: #27AE60; }
+    background: #27AE60;
+    border-color: #228a4e; }
     .casino_list_button a:hover span {
       color: #fff; }
     .casino_list_button a:hover svg path {
@@ -534,6 +535,8 @@ body.overflow {
         width: 24px;
         height: 24px;
         flex: 0 0 24px; }
+        .casino_slider_fluid .casino_list_item .casino_list_flags img:last-child {
+          transform: translateY(-12px); }
         .casino_slider_fluid .casino_list_item .casino_list_flags img:first-child {
           margin-bottom: 5px; }
     .casino_slider_fluid .casino_list_item .rev_stars {
@@ -643,9 +646,9 @@ footer {
   position: relative; }
   footer .scrop_top {
     position: absolute;
-    bottom: 10%;
+    bottom: -25px;
     z-index: 1000;
-    right: 10%;
+    right: 7%;
     cursor: pointer;
     -webkit-animation: scroltop 4s infinite linear;
     animation: scroltop 4s infinite linear;
@@ -1092,7 +1095,7 @@ footer {
 
 .top_common_story_fluid {
   background-color: #5642EC;
-  background-image: url("../img/story_bg.png");
+  background-image: url("../images/top_bg.png"), url("../images/story_bg.png");
   background-repeat: no-repeat;
   background-position: right;
   width: 100%;
